--- a/ability/crossplatform/ability_runtime/contexttest/entry/src/main/module.json5
+++ b/ability/crossplatform/ability_runtime/contexttest/entry/src/main/module.json5
@@ -41,6 +41,11 @@
         "startWindowIcon": "$media:icon",
         "startWindowBackground": "$color:start_window_background"
       }
+    ],
+    "requestPermissions": [
+      {
+        "name":"ohos.permission.START_ABILITIES_FROM_BACKGROUND",
+      },
     ]
   }
 }
