--- a/ability/crossplatform/ability_runtime/commonTestAbilityApp/.arkui-x/ios/app/Info.plist
+++ b/ability/crossplatform/ability_runtime/commonTestAbilityApp/.arkui-x/ios/app/Info.plist
@@ -10,6 +10,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>com.example.commontestabilityapp</string>
+				<string>com.gxy.test1</string>
 			</array>
 		</dict>
 	</array>
