--- a/graphic/crossplatform/WebViewControllerTest/.arkui-x/android/app/src/main/AndroidManifest.xml
+++ b/graphic/crossplatform/WebViewControllerTest/.arkui-x/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.webviewcontrollertest">
 
 <uses-permission android:name="android.permission.INTERNET"/>
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+<uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
 <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:name=".MyApplication"
