--- a/arkui/crossplatform/Xcomponent/oh-package.json5
+++ b/arkui/crossplatform/Xcomponent/oh-package.json5
@@ -1,4 +1,5 @@
 {
+  "modelVersion": "5.0.2",
   "name": "Xcomponent",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
