--- a/file/crossplatform/PhotoAccessHelperTest/oh-package.json5
+++ b/file/crossplatform/PhotoAccessHelperTest/oh-package.json5
@@ -1,4 +1,5 @@
 {
+  "modelVersion": "5.0.1",
   "name": "PhotoAccessHelperTest",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
