[5.0.3_Release][XTS] [graphic] webviewtest2 XTS适配修改
Signed-off-by: soda-mi <guoxiaoyu19@huawei.com>

--- a/graphic/crossplatform/webviewtest2/oh-package.json5
+++ b/graphic/crossplatform/webviewtest2/oh-package.json5
@@ -1,4 +1,5 @@
 {
+  "modelVersion": "5.0.2",
   "name": "webviewtest2",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
