--- a/communication/crossplatform/wifimanagertest2/entry/src/main/module.json5
+++ b/communication/crossplatform/wifimanagertest2/entry/src/main/module.json5
@@ -32,6 +32,11 @@
           }
         ]
       }
+    ],
+    "requestPermissions": [
+      {
+        "name": "ohos.permission.GET_WIFI_INFO"
+      }
     ]
   }
 }
