--- a/arkxtest/uiacttest/oh-package.json5
+++ b/arkxtest/uiacttest/oh-package.json5
@@ -1,13 +1,13 @@
 {
-  "name": "uiacttest",
-  "version": "1.0.0",
-  "description": "Please describe the basic information.",
-  "main": "",
-  "author": "",
+  "modelVersion": "5.0.2",
   "license": "",
-  "dependencies": {
-  },
   "devDependencies": {
     "@ohos/hypium": "1.0.6"
-  }
+  },
+  "author": "",
+  "name": "uiacttest",
+  "description": "Please describe the basic information.",
+  "main": "",
+  "version": "1.0.0",
+  "dependencies": {}
 }
