--- a/global/crossplatform/intltest/oh-package.json5
+++ b/global/crossplatform/intltest/oh-package.json5
@@ -1,4 +1,5 @@
 {
+  "modelVersion": "5.0.2",
   "name": "intltest",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
