--- a/commonlibrary/crossplatform/sendableCollections/AppScope/app.json5
+++ b/commonlibrary/crossplatform/sendableCollections/AppScope/app.json5
@@ -1,6 +1,6 @@
 {
   "app": {
-    "bundleName": "com.example.test",
+    "bundleName": "com.example.sendablecollections",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
