--- a/commonlibrary/crossplatform/sendableCollections/.arkui-x/android/app/build.gradle
+++ b/commonlibrary/crossplatform/sendableCollections/.arkui-x/android/app/build.gradle
@@ -31,7 +31,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.test"
+        applicationId "com.example.sendablecollections"
         minSdkVersion 26
         targetSdkVersion 33
         versionCode 1
