--- a/arkui/crossplatform/drawableDescriptorxts/oh-package.json5
+++ b/arkui/crossplatform/drawableDescriptorxts/oh-package.json5
@@ -1,4 +1,5 @@
 {
+  "modelVersion": "5.0.4",
   "name": "drawableDescriptorxts",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
