--- a/file/crossplatform/Filepickerxts/oh-package.json5
+++ b/file/crossplatform/Filepickerxts/oh-package.json5
@@ -1,4 +1,5 @@
 {
+  "modelVersion": "5.1.1",
   "name": "Filepickerxts",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
