--- a/global2/crossplatform/i18ntest/AppScope/app.json5
+++ b/global2/crossplatform/i18ntest/AppScope/app.json5
@@ -1,6 +1,6 @@
 {
   "app": {
-    "bundleName": "com.example.i18ntest",
+    "bundleName": "com.example.i18ntest2",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
