[Master][global2]  i18ntest1 包名整改
Signed-off-by: jinhaiOH5 <jinhai2@huawei.com>

--- a/global2/crossplatform/i18ntest1/.arkui-x/android/app/build.gradle
+++ b/global2/crossplatform/i18ntest1/.arkui-x/android/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.i18ntest"
+        applicationId "com.example.i18ntest1"
         minSdkVersion 26
         targetSdkVersion 33
         versionCode 1
