--- a/global2/crossplatform/i18ntest1/oh-package.json5
+++ b/global2/crossplatform/i18ntest1/oh-package.json5
@@ -5,7 +5,7 @@
     "@ohos/hypium": "1.0.6"
   },
   "author": "",
-  "name": "i18ntest",
+  "name": "i18ntest1",
   "description": "Please describe the basic information.",
   "main": "",
   "version": "1.0.0",
