--- a/global2/crossplatform/i18ntest1/.arkui-x/ios/app/Info.plist
+++ b/global2/crossplatform/i18ntest1/.arkui-x/ios/app/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>I18ntest</string>
+	<string>I18ntest1</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>i18ntest</string>
+	<string>i18ntest1</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -23,7 +23,7 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.example.i18ntest</string>
+				<string>com.example.i18ntest1</string>
 			</array>
 		</dict>
 	</array>
