--- a/multimedia/crossplatform/audiotest/hvigor/hvigor-config.json5
+++ b/multimedia/crossplatform/audiotest/hvigor/hvigor-config.json5
@@ -1,8 +1,7 @@
 {
-  "hvigorVersion": "3.0.9",
+  "modelVersion": "5.1.1",
   "dependencies": {
-    "@ohos/hvigor-ohos-plugin": "3.0.9",
-    "@ohos/hvigor-ohos-arkui-x-plugin": "2.1.7"
+    "@ohos/hvigor-ohos-arkui-x-plugin": "4.19.6"
   },
   "execution": {
     // "daemon": true,                          /* Enable daemon compilation. Default: true */
