[Master][multimedia] imagetest2 sdk升级 & 包名整改
Signed-off-by: Teacher_Dong <dongwang.wangdong@huawei.com>

--- a/multimedia/crossplatform/imagetest2/.arkui-x/ios/app/Info.plist
+++ b/multimedia/crossplatform/imagetest2/.arkui-x/ios/app/Info.plist
@@ -9,9 +9,9 @@
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleName</key>
-	<string>imagetest</string>
+	<string>imagetest2</string>
 	<key>CFBundleDisplayName</key>
-	<string>Imagetest</string>
+	<string>Imagetest2</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleVersion</key>
