--- a/multimedia/crossplatform/imagetest2/AppScope/app.json5
+++ b/multimedia/crossplatform/imagetest2/AppScope/app.json5
@@ -1,6 +1,6 @@
 {
   "app": {
-    "bundleName": "com.example.imagetest",
+    "bundleName": "com.example.imagetest2",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
