--- a/multimedia/crossplatform/imagetest2/oh-package.json5
+++ b/multimedia/crossplatform/imagetest2/oh-package.json5
@@ -5,7 +5,7 @@
     "@ohos/hypium": "1.0.6"
   },
   "author": "",
-  "name": "imageTest",
+  "name": "imageTest2",
   "description": "Please describe the basic information.",
   "main": "",
   "version": "1.0.0",
