[Master][distributeddatamgr] testPreferences2 包名整改
Signed-off-by: Teacher_Dong <dongwang.wangdong@huawei.com>

--- a/distributeddatamgr/crossplatform/testPerferences2/.arkui-x/android/app/build.gradle
+++ b/distributeddatamgr/crossplatform/testPerferences2/.arkui-x/android/app/build.gradle
@@ -31,7 +31,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.testperferences"
+        applicationId "com.example.testperferences2"
         minSdkVersion 26
         targetSdkVersion 33
         versionCode 1
