--- a/distributeddatamgr/crossplatform/testPerferences2/.arkui-x/ios/app/Info.plist
+++ b/distributeddatamgr/crossplatform/testPerferences2/.arkui-x/ios/app/Info.plist
@@ -9,9 +9,9 @@
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleName</key>
-	<string>testperferences</string>
+	<string>testperferences2</string>
 	<key>CFBundleDisplayName</key>
-	<string>Testperferences</string>
+	<string>Testperferences2</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleVersion</key>
