--- a/distributeddatamgr/crossplatform/testPerferences2/AppScope/app.json5
+++ b/distributeddatamgr/crossplatform/testPerferences2/AppScope/app.json5
@@ -1,6 +1,6 @@
 {
   "app": {
-    "bundleName": "com.example.testperferences",
+    "bundleName": "com.example.testperferences2",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
