--- a/notification/crossplatform/notificationxts/oh-package.json5
+++ b/notification/crossplatform/notificationxts/oh-package.json5
@@ -1,4 +1,5 @@
 {
+  "modelVersion": "5.1.1",
   "name": "notificationxts",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
