--- a/request/crossplatform/requesttest2/.arkui-x/android/app/build.gradle
+++ b/request/crossplatform/requesttest2/.arkui-x/android/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.requesttest"
+        applicationId "com.example.requesttest2"
         minSdkVersion 26
         targetSdkVersion 33
         versionCode 1
