--- a/request/crossplatform/requesttest2/oh-package.json5
+++ b/request/crossplatform/requesttest2/oh-package.json5
@@ -5,7 +5,7 @@
     "@ohos/hypium": "1.0.6"
   },
   "author": "",
-  "name": "requestTest",
+  "name": "requesttest2",
   "description": "Please describe the basic information.",
   "main": "",
   "version": "1.0.0",
