[Master][request] sdk升级&包名整改
Signed-off-by: soda-mi <guoxiaoyu19@huawei.com>

--- a/request/crossplatform/requesttest3/.arkui-x/ios/app/Info.plist
+++ b/request/crossplatform/requesttest3/.arkui-x/ios/app/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Requesttest</string>
+	<string>Requesttest3</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>requesttest</string>
+	<string>requesttest3</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -25,7 +25,8 @@
 			<string></string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.example.requesttest</string>
+				<string>com.example.requesttest3</string>
+				<string>com.xts1.test</string>
 			</array>
 		</dict>
 	</array>
