--- a/request/crossplatform/requesttest3/.arkui-x/android/app/src/main/AndroidManifest.xml
+++ b/request/crossplatform/requesttest3/.arkui-x/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.requesttest">
+    package="com.example.requesttest3">
 
     <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
     <uses-permission android:name="android.permission.INTERNET"/>
