[Master][distributeddatamgr] testRelationalStore2 包名整改
Signed-off-by: soda-mi <guoxiaoyu19@huawei.com>

--- a/distributeddatamgr/crossplatform/testRelationalStore2/.arkui-x/ios/app/Info.plist
+++ b/distributeddatamgr/crossplatform/testRelationalStore2/.arkui-x/ios/app/Info.plist
@@ -9,9 +9,9 @@
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleName</key>
-	<string>testrelationalstore</string>
+	<string>testrelationalstore2</string>
 	<key>CFBundleDisplayName</key>
-	<string>Testrelationalstore</string>
+	<string>Testrelationalstore2</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleVersion</key>
