--- a/distributeddatamgr/crossplatform/testRelationalStore2/.arkui-x/android/app/build.gradle
+++ b/distributeddatamgr/crossplatform/testRelationalStore2/.arkui-x/android/app/build.gradle
@@ -31,7 +31,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.testrelationalstore"
+        applicationId "com.example.testrelationalstore2"
         minSdkVersion 26
         targetSdkVersion 33
         versionCode 1
