--- a/distributeddatamgr/crossplatform/testRelationalStore2/.arkui-x/android/app/src/main/AndroidManifest.xml
+++ b/distributeddatamgr/crossplatform/testRelationalStore2/.arkui-x/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.testrelationalstore">
+    package="com.example.testrelationalstore2">
 
 <uses-permission android:name="android.permission.INTERNET"/>
     <application
