--- a/distributeddatamgr/crossplatform/testRelationalStore/.arkui-x/ios/app/Info.plist
+++ b/distributeddatamgr/crossplatform/testRelationalStore/.arkui-x/ios/app/Info.plist
@@ -7,8 +7,7 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.example.testrelationalstore
-				</string>
+				<string>com.example.testrelationalstore</string>
 			</array>
 		</dict>
 	</array>
