--- a/location/crossplatform/geolocationManager1/oh-package.json5
+++ b/location/crossplatform/geolocationManager1/oh-package.json5
@@ -1,6 +1,6 @@
 {
   "modelVersion": "5.0.4",
-  "name": "demo2",
+  "name": "geolocationManager1",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
   "main": "",
