--- a/location/crossplatform/geolocationManager2/oh-package.json5
+++ b/location/crossplatform/geolocationManager2/oh-package.json5
@@ -1,6 +1,6 @@
 {
   "modelVersion": "5.0.4",
-  "name": "demo3",
+  "name": "geolocationManager2",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
   "main": "",
