--- a/location/crossplatform/geolocationManager3/.arkui-x/android/app/build.gradle
+++ b/location/crossplatform/geolocationManager3/.arkui-x/android/app/build.gradle
@@ -31,7 +31,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.demo6"
+        applicationId "com.example.geolocationManager3"
         minSdkVersion 26
         targetSdkVersion 33
         versionCode 1
