--- a/location/crossplatform/geolocationManager3/oh-package.json5
+++ b/location/crossplatform/geolocationManager3/oh-package.json5
@@ -1,6 +1,6 @@
 {
   "modelVersion": "5.0.3",
-  "name": "demo6",
+  "name": "geolocationManager3",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
   "main": "",
