--- a/location/crossplatform/geolocationManager3/AppScope/app.json5
+++ b/location/crossplatform/geolocationManager3/AppScope/app.json5
@@ -1,6 +1,6 @@
 {
   "app": {
-    "bundleName": "com.example.geolocationManager3",
+    "bundleName": "com.example.geolocationmanager3",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
