--- a/location/crossplatform/geolocationManager1/.arkui-x/android/app/build.gradle
+++ b/location/crossplatform/geolocationManager1/.arkui-x/android/app/build.gradle
@@ -31,7 +31,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.geolocationManager1"
+        applicationId "com.example.geolocationmanager1"
         minSdkVersion 26
         targetSdkVersion 33
         versionCode 1
