--- a/location/crossplatform/geolocationManager3/.arkui-x/android/gradle/wrapper/gradle-wrapper.properties
+++ b/location/crossplatform/geolocationManager3/.arkui-x/android/gradle/wrapper/gradle-wrapper.properties
@@ -3,4 +3,4 @@ distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=file:///C:/Users/Xu_gq/.gradle/wrapper/dists/gradle-8.13-all/63wyyv40tf1zqx23wliuz34qx/gradle-8.13-all.zip
+distributionUrl=https\://repo.huaweicloud.com/gradle/gradle-8.5-all.zip
