--- a/graphic/crossplatform/windowtest2/winDisplayxts/.arkui-x/android/app/build.gradle
+++ b/graphic/crossplatform/windowtest2/winDisplayxts/.arkui-x/android/app/build.gradle
@@ -73,6 +73,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+    implementation 'androidx.core:core:1.8.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
